# Thinking-Out-Loud-Neural-Network

./: .gitignore  Pipfile  setup.cfg
py38src/: ActivationFunctions.py  ErrorFunctions.py  Layers.py  NeuralNetwork.py
py38src/data/: sim_training_data.txt
py38src/utils/: LayerUtils.py  TrainingUtils.py
src/: ErrorFunctions.py  Layers.py  NeuralNetwork.py  NeuralNetwork2.py  NodeArrays.py  tempCodeRunnerFile.py
src/data/: gen_data.py  sim_training_data.txt
src/utils/: LayerUtils.py  TrainingUtils.py  tempCodeRunnerFile.py
