[metadata]
name = Thinking-Out-Loud
version = 0.0.1
author = Shrey Biswas
author_email = shrey.biswas@gmail.com
url = bio.link/shreybiswas
description = An Open Box Approach to Neural Networks

[options]
packages = find:
install_requires =
    matplotlib >= 3.3.4
    tqdm >= 4.56.0
package_dir=
    =src
zip_safe = True
include_package_data = True


[options.packages.find]
where=src
example = src/data/sim_training_data.txt